--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "1.20.1",
     "cors": "2.8.5",
     "cron": "2.1.0",
+    "crypto": "^1.0.1",
     "csv-parser": "^3.0.0",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
@@ -45,6 +46,7 @@
     "fs": "*",
     "fs-extra": "^11.1.1",
     "google-auth-library": "8.7.0",
+    "joi": "^17.11.0",
     "jsonwebtoken": "9.0.0",
     "mongoose": "^7.6.3",
     "morgan": "1.10.0",
