--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "2.8.5",
     "cron": "2.1.0",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "csv-parser": "^3.0.0",
     "dayjs": "1.11.7",
     "dotenv": "16.0.3",
@@ -71,6 +72,7 @@
     "@types/body-parser": "1.19.2",
     "@types/cors": "2.8.13",
     "@types/cron": "2.0.0",
+    "@types/crypto-js": "^4.1.3",
     "@types/express": "4.17.15",
     "@types/fs-extra": "^11.0.1",
     "@types/jsonwebtoken": "9.0.0",
